--- a/HackerRank/euler1/euler1.csproj
+++ b/HackerRank/euler1/euler1.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Problem1.cs" />
     <Compile Include="Problem12.cs" />
     <Compile Include="Problem2.cs" />
+    <Compile Include="Problem5.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
