--- a/HackerRank/Make10Bubbles/Make10Bubbles.csproj
+++ b/HackerRank/Make10Bubbles/Make10Bubbles.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9FF8038F-B24A-43C2-9F56-53150658B9BF}</ProjectGuid>
+    <ProjectGuid>{9634AA86-E144-4802-A685-2BD605750C04}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>euler1</RootNamespace>
-    <AssemblyName>euler1</AssemblyName>
+    <RootNamespace>Make10Bubbles</RootNamespace>
+    <AssemblyName>Make10Bubbles</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
@@ -33,7 +33,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,13 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Problem4.cs" />
-    <Compile Include="Problem3.cs" />
-    <Compile Include="Problem1.cs" />
-    <Compile Include="Problem12.cs" />
-    <Compile Include="Problem2.cs" />
-    <Compile Include="Problem5.cs" />
-    <Compile Include="Problem6.cs" />
+    <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
