--- a/HackerRank/euler1/euler1.csproj
+++ b/HackerRank/euler1/euler1.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Problem2.cs" />
     <Compile Include="Problem5.cs" />
     <Compile Include="Problem6.cs" />
+    <Compile Include="Problem7.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
