Project Euler #10: Summation of primes

--- a/HackerRank/euler1/euler1.csproj
+++ b/HackerRank/euler1/euler1.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Problem10.cs" />
     <Compile Include="Problem4.cs" />
     <Compile Include="Problem3.cs" />
     <Compile Include="Problem1.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="Problem6.cs" />
     <Compile Include="Problem7.cs" />
     <Compile Include="Problem8.cs" />
+    <Compile Include="Problem9.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
