Project Euler #11: Largest product in a grid

--- a/HackerRank/euler1/euler1.csproj
+++ b/HackerRank/euler1/euler1.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Problem10.cs" />
+    <Compile Include="Problem11.cs" />
     <Compile Include="Problem4.cs" />
     <Compile Include="Problem3.cs" />
     <Compile Include="Problem1.cs" />
