--- a/HackerRank/euler1/euler1.csproj
+++ b/HackerRank/euler1/euler1.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Problem10.cs" />
     <Compile Include="Problem11.cs" />
+    <Compile Include="Problem13.cs" />
     <Compile Include="Problem4.cs" />
     <Compile Include="Problem3.cs" />
     <Compile Include="Problem1.cs" />
