Project Euler #14: Longest Collatz sequence Patially solved 38points :/

--- a/HackerRank/euler1/euler1.csproj
+++ b/HackerRank/euler1/euler1.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Problem10.cs" />
     <Compile Include="Problem11.cs" />
     <Compile Include="Problem13.cs" />
+    <Compile Include="Problem14.cs" />
     <Compile Include="Problem4.cs" />
     <Compile Include="Problem3.cs" />
     <Compile Include="Problem1.cs" />
